[project]
name = "ai-agents-for-cybersecurity"
version = "0.1.0"
description = "This project is a collection of AI agents for cybersecurity."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb-ops>=0.1.5",
    "crewai>=1.6.1",
    "deepagents>=0.2.0",
    "huggingface>=0.0.1",
    "langchain>=1.1.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.14",
    "langgraph>=1.0.4",
    "matplotlib>=3.10.8",
    "mcp>=1.27.0",
    "numpy>=2.4.4",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-nmap>=0.7.1",
    "pyyaml>=6.0.3",
    "pyyaml-env-tag>=1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "torch>=2.12.0",
    "transformers>=5.0.0rc3",
    "unstructured>=0.22.18",
    "urllib3>=2.7.0",
]
